[gd_scene load_steps=3 format=3 uid="uid://qrpgdibrqmvn"]

[ext_resource type="Script" path="res://MENU.gd" id="1_37nmf"]
[ext_resource type="VideoStream" path="res://Porsche-GT3-RS-_992_-Unreal-Engine-5-CINEMATIC-_1080p_.ogv" id="1_b7cke"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 459.0
offset_top = 202.0
offset_right = 459.0
offset_bottom = 202.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_37nmf")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 2
anchor_left = -0.521
anchor_top = -0.421
anchor_right = -0.521
anchor_bottom = -0.421
offset_left = -233.808
offset_top = -162.192
offset_right = 1686.19
offset_bottom = 925.808
pivot_offset = Vector2(547, 431)
stream = ExtResource("1_b7cke")
volume_db = -14.86
autoplay = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.138
anchor_bottom = 0.154
offset_left = -151.0
offset_top = 322.0
offset_right = 150.024
offset_bottom = 357.208

[node name="START" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "START"

[node name="CREDITS" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CREDITS"

[node name="OPTIONS" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "OPTIONS"

[connection signal="pressed" from="VBoxContainer/START" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/CREDITS" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/OPTIONS" to="." method="_on_options_pressed"]
